--- a/index.html
+++ b/index.html
@@ -3,37 +3,104 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-
+    @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+    *{
+      margin: 0px;
+      padding: 0px;
+      box-sizing: border-box;
+      font-family: 'Kumbh Sans';
+    }
+    body{
+      background-color: hsl(185, 75%, 39%);      
+    }
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    .background-left{
+      height: 100vh;
+      width: 50vw;
+      background-image: url('images/bg-pattern-top.svg');
+    }
+    .wrapper{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+    .card{
+      margin:0px;
+      height: 375px;
+      width: 350px;
+      border-radius: 16px;
+      overflow: hidden;
+      background-color: white;
 
+    }
+    .card .top{
+      text-align: center;
+      height: 285px;
+      background-image: url('images/bg-pattern-card.svg');
+      background-repeat: no-repeat;
+    }
+    .hero{
+      position: relative;
+      top: 30%;
+    }
+    .card .avatar{
+      border-radius: 50%;
+      padding: 1px;
+      border: 3px solid transparent;
+      background: white;
+    }
+    
+    .card .bottom{
+      height: 90px;
+      border-top: 1px solid hsl(0, 0%, 59%);
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
+    .card .bottom p{
+      line-height: 1.618;
+    }
   </style>
 </head>
 <body>
+  <div class="background-left"></div>
+  <div class="background-right"></div>
   <main class="wrapper">
     <article class="card">
-
+      <div class="top">
+        <div class="hero">
+          <img src="images/image-victor.jpg" alt="" class="avatar">
+          <h1>Victor Crest <span>26</span></h1>
+          <p>London</p>
+        </div>
+      </div>
+      <div class="bottom">
+        <div class="stats">
+          <h1>80K</h1>
+          <p>Followers</p>
+        </div>
+        <div class="stats">
+          <h1>803K</h1>
+          <p>Likes</p>
+        </div>
+        <div class="stats">
+          <h1>1.4K</h1>
+          <p>Photos</p>
+        </div>
+      </div>
     </article>
   </main>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
