--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
       font-family: 'Kumbh Sans';
     }
     body{
-      background-color: hsl(185, 75%, 39%);      
+      background-color: hsl(185, 75%, 39%);  
+      overflow-x:hidden;
+      background-image: url('images/bg-pattern-top.svg'),url('images/bg-pattern-bottom.svg');
+      background-repeat: no-repeat;
+      background-position: -50% 200%,150% -150%;
+      background-size: initial;
+      background-attachment: fixed;    
     }
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-    .background-left{
-      height: 100vh;
-      width: 50vw;
-      background-image: url('images/bg-pattern-top.svg');
-    }
+    
     .wrapper{
       display: flex;
       align-items: center;
@@ -74,8 +76,6 @@
   </style>
 </head>
 <body>
-  <div class="background-left"></div>
-  <div class="background-right"></div>
   <main class="wrapper">
     <article class="card">
       <div class="top">
